--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url("Background.jpg");
+            background-size: cover; /* hoặc "contain" nếu bạn muốn giữ đúng tỷ lệ */
+            background-repeat: no-repeat;
+            background-position: center center;
+        }
+    </style>
   <meta charset="UTF-8">
   <title>AI-Driven Cyclone Prediction</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
